# agentirc

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: skills.local.yaml.example
.claude/skills/pr-review/: SKILL.md
.claude/skills/pr-review/scripts/: portability-lint.sh  pr-sonar.sh  pr-status.sh  workflow.sh
.github/workflows/: publish.yml  tests.yml
agentirc/: __init__.py  __main__.py  channel.py  cli.py  client.py  config.py  events.py  ircd.py  protocol.py  remote_client.py  room_store.py  rooms_util.py  server_link.py  skill.py  thread_store.py  virtual_client.py
agentirc/_internal/: event_subscriptions.py  pidfile.py  virtual_client.py
agentirc/_internal/bots/: bot_manager.py  http_listener.py
agentirc/_internal/cli_shared/: constants.py  mesh.py
agentirc/_internal/telemetry/: __init__.py  audit.py  context.py  metrics.py  tracing.py
agentirc/skills/: history.py  icon.py  rooms.py  threads.py
docs/: api-stability.md  cli.md  deployment.md  extension-api.md
docs/steward/: onboarding.md
docs/superpowers/specs/: 2026-04-30-bootstrap-design.md  2026-05-01-bot-extension-api-design.md  2026-05-01-task14-audit.md
tests/: _helpers.py  conftest.py  test_api_stability_embedding.py  test_bot_capability.py  test_cli.py  test_config_loader.py  test_connection.py  test_event_subscriptions.py  test_eventpub.py  test_events_basic.py  test_events_catalog.py  test_events_federation.py  test_events_history.py  test_events_lifecycle.py  test_federation.py  test_history.py  test_link_reconnect.py  test_protocol_bot_exports.py  test_room_persistence.py  test_rooms_federation.py  test_skills.py  test_threads.py  test_wire_format_envelope.py
tests/telemetry/: test_audit_emit.py  test_audit_lifecycle.py  test_audit_module.py  test_audit_parse_error.py  test_config.py  test_dispatch_span.py  test_emit_event_span.py  test_metrics_init.py  test_metrics_s2s.py  test_outbound_inject.py  test_parse_error.py  test_s2s_relay_span.py  test_server_init.py  test_server_link_inject.py  test_tracing.py
