[project]
name = "agentirc-cli"
version = "9.0.0"
description = "Agent-friendly IRCd: server core for AI agent meshes"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ori Nachum" },
]
keywords = [
    "irc",
    "ircd",
    "agents",
    "mesh",
    "culture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
dependencies = []

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3",
    "black",
    "isort",
    "flake8",
    "pylint",
    "bandit",
]

[project.scripts]
agentirc = "agentirc.cli:main"
agentirc-cli = "agentirc.cli:main"

[project.urls]
Homepage = "https://github.com/OriNachum/agentirc"
Issues = "https://github.com/OriNachum/agentirc/issues"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agentirc",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.citation.packages.culture-aio]
schema = 2
source = "https://github.com/OriNachum/culture/blob/df50942/culture/aio.py"
version = "df50942"
target = "agentirc/_internal/aio.py"
cited = "2026-04-30"

[tool.citation.packages.culture-aio.files."aio.py"]
status = "quote"
sha256 = "70ea1f2ca51d33d9e81c80926efe57a7e3d03a2b80605e09cb90ac91e7d12a92"
