[project]
name = "agentirc-cli"
version = "9.1.0"
description = "Agent-friendly IRCd: server core for AI agent meshes"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ori Nachum" },
]
keywords = [
    "irc",
    "ircd",
    "agents",
    "mesh",
    "culture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
dependencies = [
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "opentelemetry-exporter-otlp-proto-grpc>=1.22",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3",
    "black",
    "isort",
    "flake8",
    "pylint",
    "bandit",
    "citation-cli",
]

[project.scripts]
agentirc = "agentirc.cli:main"
agentirc-cli = "agentirc.cli:main"

[project.urls]
Homepage = "https://github.com/OriNachum/agentirc"
Issues = "https://github.com/OriNachum/agentirc/issues"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agentirc",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.citation.packages.culture-aio]
schema = 2
source = "https://github.com/OriNachum/culture/blob/df50942/culture/aio.py"
version = "df50942"
target = "agentirc/_internal/"
cited = "2026-04-30"

[tool.citation.packages.culture-aio.files."aio.py"]
status = "quote"
sha256 = "70ea1f2ca51d33d9e81c80926efe57a7e3d03a2b80605e09cb90ac91e7d12a92"

[tool.citation.packages.culture-constants]
schema = 2
source = "https://github.com/OriNachum/culture/blob/df50942/culture/constants.py"
version = "df50942"
target = "agentirc/_internal/"
cited = "2026-04-30"

[tool.citation.packages.culture-constants.files."constants.py"]
status = "quote"
sha256 = "681e070655204d0412bcaadf633408d23caf72e13f6b17039ee8487e74f7d7dd"

[tool.citation.packages.culture-protocol-message]
schema = 2
source = "https://github.com/OriNachum/culture/blob/df50942/culture/protocol/message.py"
version = "df50942"
target = "agentirc/_internal/protocol/"
cited = "2026-04-30"

[tool.citation.packages.culture-protocol-message.files."message.py"]
status = "quote"
sha256 = "e2817ce3de414a4890b9eb2824e151461ee4de5a442fd34cfefaac5840b0bdac"

[tool.citation.packages.culture-protocol-replies]
schema = 2
source = "https://github.com/OriNachum/culture/blob/df50942/culture/protocol/replies.py"
version = "df50942"
target = "agentirc/_internal/protocol/"
cited = "2026-04-30"

[tool.citation.packages.culture-protocol-replies.files."replies.py"]
status = "quote"
sha256 = "53b7a94f76a6853217c905d4e13cc898c181fc2e9201738bb2c18f5e719a9e8f"

[tool.citation.packages.culture-telemetry]
schema = 2
source = "https://github.com/OriNachum/culture/tree/df50942/culture/telemetry"
version = "df50942"
target = "agentirc/_internal/telemetry/"
cited = "2026-04-30"
notes = "Whole package vendored verbatim with import-path rewrites: from culture.telemetry.X to from agentirc._internal.telemetry.X, from culture.protocol.message to from agentirc._internal.protocol.message, from culture.agentirc.config to from agentirc.config, from culture.agentirc.skill (TYPE_CHECKING) to from agentirc.skill."

[tool.citation.packages.culture-telemetry.files."__init__.py"]
status = "paraphrase"
sha256 = "604644ef14a66601fa5c7a8b7e2c2ab7901f39c2a679bbf1d62661c8a9d8ecc1"

[tool.citation.packages.culture-telemetry.files."audit.py"]
status = "paraphrase"
sha256 = "0aa7d19f97b7421dffc22cde64448aa654bc90c25b989fd85e775e4e51a0b336"

[tool.citation.packages.culture-telemetry.files."context.py"]
status = "paraphrase"
sha256 = "4c887a600dd5572da12830247781f053d0aee67ac11e9dc9b4ce099091ee2505"

[tool.citation.packages.culture-telemetry.files."metrics.py"]
status = "paraphrase"
sha256 = "fc34b24e36b5059f2de21cdf913dc3b640beab560fe827d247ff0100f044ce1e"

[tool.citation.packages.culture-telemetry.files."tracing.py"]
status = "paraphrase"
sha256 = "17262e10e4cb1d3fa1db56c7b966e33757d4581fe961789d8f1f7197f3328c02"

[tool.citation.packages.culture-virtual-client]
schema = 2
source = "https://github.com/OriNachum/culture/blob/df50942/culture/bots/virtual_client.py"
version = "df50942"
target = "agentirc/_internal/virtual_client.py"
cited = "2026-04-30"
notes = "Vendored verbatim with imports rewritten: from culture.agentirc.skill to from agentirc.skill, from culture.protocol.message to from agentirc._internal.protocol.message, from culture.agentirc.remote_client (lazy) to from agentirc.remote_client."

[tool.citation.packages.culture-virtual-client.files."virtual_client.py"]
status = "paraphrase"
sha256 = "5e90a9e0ba5cd95651167b71f4cf3d2b5c4f18f809cb061f345ff3a81cf66969"

[tool.citation.packages.culture-pidfile]
schema = 2
source = "https://github.com/OriNachum/culture/blob/df50942/culture/pidfile.py"
version = "df50942"
target = "agentirc/_internal/pidfile.py"
cited = "2026-05-01"
notes = "Vendored from culture/pidfile.py with one adaptation: is_managed_process() recognizes both 'culture' and 'agentirc'/'agentirc-cli' argv tokens so agentirc daemons (which exec as 'agentirc serve') are matched alongside culture's. is_culture_process is preserved as an alias. PID_DIR stays at ~/.culture/pids per the 'Defaults preserve culture continuity' rule."

[tool.citation.packages.culture-pidfile.files."pidfile.py"]
status = "paraphrase"
sha256 = "ad72d0081e03aaf4a907c08a3f44b7866e828fc460d4e9faf6770b4dea13def7"

[tool.citation.packages.culture-cli-shared]
schema = 2
source = "https://github.com/OriNachum/culture/tree/df50942/culture/cli/shared"
version = "df50942"
target = "agentirc/_internal/cli_shared/"
cited = "2026-05-01"
notes = "Minimal subset of culture/cli/shared. Kept: DEFAULT_CONFIG, LOG_DIR, _CONFIG_HELP, _SERVER_NAME_HELP, culture_runtime_dir() (constants.py), parse_link() (mesh.py). Dropped: BOT_CONFIG_FILE et al (bot config — agentirc has none); resolve_links_from_mesh, generate_mesh_from_agents (depend on culture.credentials/mesh_config). LinkConfig import in parse_link rewritten from culture.agentirc.config to agentirc.config."

[tool.citation.packages.culture-cli-shared.files."__init__.py"]
status = "synthesize"
sha256 = "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"

[tool.citation.packages.culture-cli-shared.files."constants.py"]
status = "paraphrase"
sha256 = "5469207f4ae5075e8d76c06b152f039088287d3972bba0a1430c59481c7c33bf"

[tool.citation.packages.culture-cli-shared.files."mesh.py"]
status = "paraphrase"
sha256 = "5238e222c33d499df687a4b8002083fabd029b86b8dc885a9deaccb75e6a05c8"

[tool.citation.packages.culture-client]
schema = 2
source = "https://github.com/OriNachum/culture/blob/df50942/culture/agentirc/client.py"
version = "df50942"
target = "agentirc/client.py"
cited = "2026-05-01"
notes = "Vendored from culture/agentirc/client.py with import paths rewritten only — body unchanged. Imports moved from culture.* to agentirc.* / agentirc._internal.* (channel, skill, aio, constants, protocol, telemetry, remote_client). The OTEL tracer name 'culture.agentirc' is preserved verbatim because downstream trace consumers grep for it. The bootstrap spec originally said this file 'stays in culture'; deferring left agentirc/ircd.py:580's runtime import broken on the first TCP client connection. Vendoring is safe under the dependency boundary because client.py only imports already-vendored support modules plus opentelemetry."

[tool.citation.packages.culture-client.files."client.py"]
status = "paraphrase"
sha256 = "b7d57749b9c7c310331a671ff59d4b8059ebe30c975234711eb5a23ab0ddd050"

[tool.citation.packages.culture-bots-stubs]
schema = 2
source = "https://github.com/OriNachum/culture/tree/df50942/culture/bots"
version = "df50942"
target = "agentirc/_internal/bots/"
cited = "2026-04-30"
notes = "API-compatible no-op stubs of culture.bots.bot_manager.BotManager and culture.bots.http_listener.HttpListener. Original culture implementations depend on backend SDKs (claude-agent-sdk, anthropic, etc.) which agentirc's dependency boundary forbids. Culture replaces these stubs at runtime when wrapping an IRCd."

[tool.citation.packages.culture-bots-stubs.files."__init__.py"]
status = "synthesize"
sha256 = "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"

[tool.citation.packages.culture-bots-stubs.files."bot_manager.py"]
status = "synthesize"
sha256 = "2632914c22e7e4e7d292447a4b78972349f878ae75ae2ed1210118b18553ef32"

[tool.citation.packages.culture-bots-stubs.files."http_listener.py"]
status = "synthesize"
sha256 = "6c9e188b865256024999143a6330af4571b09e10220caff570c4bebbe93148fb"

[tool.citation.packages.culture-agentirc-server-core]
schema = 2
source = "https://github.com/OriNachum/culture/tree/df50942/culture/agentirc"
version = "df50942"
target = "agentirc/"
cited = "2026-04-30"
notes = "Server-core package vendored from culture/agentirc/. Imports rewritten from culture.agentirc.X to agentirc.X, from culture.aio/constants/protocol/telemetry/bots.virtual_client to agentirc._internal.X, and from culture.bots.{bot_manager,http_listener} to agentirc._internal.bots.X (stubs). DOES NOT include client.py (transport, stays in culture). Includes remote_client.py (43-line server-side stub that the bootstrap spec misclassified as transport — see commit 8b4a6d8 for rationale)."

[tool.citation.packages.culture-agentirc-server-core.files."ircd.py"]
status = "paraphrase"
sha256 = "477760b85e4acf861a92aaf0ea73550c07267e3c33740a412a3075598bfb68aa"

[tool.citation.packages.culture-agentirc-server-core.files."server_link.py"]
status = "paraphrase"
sha256 = "709a8a7d2f7836b9bf382f7fb4d5046a61f8eac06e27323d87835615314d6bbe"

[tool.citation.packages.culture-agentirc-server-core.files."channel.py"]
status = "paraphrase"
sha256 = "4dfa6c216d92ff15699c748aede3d3271af1413fc8b70bfc0d9ad04c9f85e172"

[tool.citation.packages.culture-agentirc-server-core.files."config.py"]
status = "quote"
sha256 = "e44ca2a7ee38e8a575275ad6a2109f2711d79e458568ac15b95741a1e459f301"

[tool.citation.packages.culture-agentirc-server-core.files."events.py"]
status = "paraphrase"
sha256 = "ef7e226906f2d44c35f82d7485a9338a8c532b91f511cd30c0a2a34987e039cc"

[tool.citation.packages.culture-agentirc-server-core.files."room_store.py"]
status = "paraphrase"
sha256 = "a2204ab71ff5ef2f6e84f79c1e22b59b6d4caaff0e7c05a9b75330cc995afa2b"

[tool.citation.packages.culture-agentirc-server-core.files."thread_store.py"]
status = "paraphrase"
sha256 = "5d1dfe2a22c3f6c60adb1986dd36841eca8c13e0235fdd07b1784b54f6326ecc"

[tool.citation.packages.culture-agentirc-server-core.files."history_store.py"]
status = "quote"
sha256 = "f0d63ae8ad665c9ac490ef5c5785a274d0a5e1efb2685c629041d1fff3f112cf"

[tool.citation.packages.culture-agentirc-server-core.files."rooms_util.py"]
status = "quote"
sha256 = "e65d013325bb413f442224b7a76a4285ab5d31485e9e18d3a38913bd8eed341f"

[tool.citation.packages.culture-agentirc-server-core.files."skill.py"]
status = "paraphrase"
sha256 = "5c9411f169227ca6ec7bcc81b4332f6a9ac80d9b774d4c62c65eae0051ac0834"

[tool.citation.packages.culture-agentirc-server-core.files."remote_client.py"]
status = "paraphrase"
sha256 = "afdfa04d39a46f1d798a020c2f929f816417cb0a4d13575cffbcc02726345df0"

[tool.citation.packages.culture-agentirc-server-core.files."skills/__init__.py"]
status = "quote"
sha256 = "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"

[tool.citation.packages.culture-agentirc-server-core.files."skills/rooms.py"]
status = "paraphrase"
sha256 = "dd50bf93b348ba07cabb8aecc812de1dacaa5949b24dce1200da4d87bc8f0d29"

[tool.citation.packages.culture-agentirc-server-core.files."skills/threads.py"]
status = "paraphrase"
sha256 = "2cec0a5801935bf5e897cf1fa7e2e446a2d63f890153e8158cf620dae64686e9"

[tool.citation.packages.culture-agentirc-server-core.files."skills/history.py"]
status = "paraphrase"
sha256 = "574682bfc9f042e8c1a304db17cfb4b1e1034f384241b83aaaecfb64decb2271"

[tool.citation.packages.culture-agentirc-server-core.files."skills/icon.py"]
status = "paraphrase"
sha256 = "5ef97657599a37476b96aa59968373aed8c82024027297f8300be9886dc18d4a"
